benswork/UARProject/force-app/main/default/objects/Org__c/Org__c.object-meta.xml
<CustomObject>
    <description>Cloud instance i.e. Salesforce Org</description>
    <label>Org</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>