benswork/UARProject/force-app/main/default/objects/Org__c/fields/Last_License_Scan__c.field-meta.xml
<CustomField>
    <fullName>Last_License_Scan__c</fullName>
    <label>Last License Scan</label>
    <type>DateTime</type>
</CustomField>