benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_Description__c.field-meta.xml
<CustomField>
    <fullName>Org_Description__c</fullName>
    <description>Description of ORG.</description>
    <label>Org Description</label>
    <type>TextArea</type>
</CustomField>