benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <description>Salesforce Org ID number</description>
    <externalId>true</externalId>
    <label>Org ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>