benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_Owner__c.field-meta.xml
<CustomField>
    <fullName>Org_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Org Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orgs (Org Owner)</relationshipLabel>
    <relationshipName>OrgOwner</relationshipName>
    <type>Lookup</type>
</CustomField>