benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Org_Owner_Email__c</fullName>
    <formula>Org_Owner__r.Email</formula>
    <label>Org Owner Email</label>
    <type>Text</type>
</CustomField>