benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Org_Owner_Phone__c</fullName>
    <formula>Org_Owner__r.Phone</formula>
    <label>Org Owner Phone</label>
    <type>Text</type>
</CustomField>