benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_POC__c.field-meta.xml
<CustomField>
    <fullName>Org_POC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Org POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orgs (ORG POC)</relationshipLabel>
    <relationshipName>OrgPOC</relationshipName>
    <type>Lookup</type>
</CustomField>