benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Org_POC_Email__c</fullName>
    <formula>Org_POC__r.Email</formula>
    <label>Org POC Email</label>
    <type>Text</type>
</CustomField>