benswork/UARProject/force-app/main/default/objects/Org__c/fields/Org_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Org_POC_Phone__c</fullName>
    <formula>Org_POC__r.Phone</formula>
    <label>Org POC Phone</label>
    <type>Text</type>
</CustomField>